--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -121,6 +121,10 @@ XXX
 
 L<XXX> has been upgraded from version A.xx to B.yy.
 
+=item *
+
+L<Module::CoreList> has been upgraded from version 5.20161220 to 5.20160120.
+
 =back
 
 =head2 Removed Modules and Pragmata
