Silence one warnings generated during 'make' by clang.
See: https://rt.cpan.org/Ticket/Display.html?id=119529

Committer:  Update version number in module's POD.  Add perldelta entry.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -195,6 +195,10 @@ L<Test> has been upgraded from version 1.29 to 1.30.
 
 =item *
 
+L<threads::shared> has been upgraded from version 1.52 to 1.53.
+
+=item *
+
 L<Unicode::UCD> has been upgraded from version 0.67 to 0.68.
 
 =item *
