--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -135,6 +135,10 @@ L<B::Xref> has been upgraded from version 1.05 to 1.06.
 
 =item *
 
+L<Compress::Raw::Bzip2> has been upgraded from version 2.069 to 2.070.
+
+=item *
+
 L<Compress::Raw::Zlib> has been upgraded from version 2.069 to 2.070.
 
 =item *
