--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -250,21 +250,21 @@ The C<PadlistNAMES> macro is an lvalue again.
 
 =head1 Acknowledgements
 
-Perl 5.22.3 represents approximately 5 months of development since Perl 5.22.2
-and contains approximately 4,000 lines of changes across 240 files from 18
+Perl 5.22.3 represents approximately 8 months of development since Perl 5.22.2
+and contains approximately 4,400 lines of changes across 240 files from 20
 authors.
 
 Excluding auto-generated files, documentation and release tools, there were
-approximately 1,900 lines of changes to 180 .pm, .t, .c and .h files.
+approximately 2,200 lines of changes to 170 .pm, .t, .c and .h files.
 
 Perl continues to flourish into its third decade thanks to a vibrant community
 of users and developers.  The following people are known to have contributed
 the improvements that became Perl 5.22.3:
 
-Abigail, Alex Vandiver, Aristotle Pagaltzis, Chris 'BinGOs' Williams, Craig A.
-Berry, David Mitchell, Father Chrysostomos, James E Keenan, Jarkko Hietaniemi,
-Karen Etheridge, Karl Williamson, Matthew Horsfall, Niko Tyni, Ricardo Signes,
-Sawyer X, Stevan Little, Steve Hay, Tony Cook.
+Aaron Crane, Abigail, Alex Vandiver, Aristotle Pagaltzis, Chad Granum, Chris
+'BinGOs' Williams, Craig A. Berry, David Mitchell, Father Chrysostomos, James E
+Keenan, Jarkko Hietaniemi, Karen Etheridge, Karl Williamson, Matthew Horsfall,
+Niko Tyni, Ricardo Signes, Sawyer X, Stevan Little, Steve Hay, Tony Cook.
 
 The list above is almost certainly incomplete as it is automatically generated
 from version control history.  In particular, it does not include the names of
