Documentation patch to recommend newSVpvn over newSVpv.
(Committer made a couple of grammatical corrections)

--- a/AUTHORS
+++ b/AUTHORS
@@ -259,6 +259,7 @@ Clinton A. Pierce		<clintp@geeksalad.org>
 Colin Kuskie			<ckuskie@cadence.com>
 Colin McMillen			<mcmi0073@tc.umn.edu>
 Colin Meyer			<cmeyer@helvella.org>
+Colin Newell			<colin.newell@gmail.com>
 Colin Watson			<colinw@zeus.com>
 Conrad Augustin
 Conrad E. Kimball		<cek@tblv021.ca.boeing.com>
