--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -2,85 +2,116 @@
 
 =head1 NAME
 
-perldelta - what is new for perl v5.24.1
+[ this is a template for a new perldelta file.  Any text flagged as XXX needs
+to be processed before release. ]
+
+perldelta - what is new for perl v5.24.2
 
 =head1 DESCRIPTION
 
-This document describes differences between the 5.24.0 release and the 5.24.1
+This document describes differences between the 5.24.1 release and the 5.24.2
 release.
 
-If you are upgrading from an earlier release such as 5.22.0, first read
-L<perl5240delta>, which describes differences between 5.22.0 and 5.24.0.
+If you are upgrading from an earlier release such as 5.24.0, first read
+L<perl5241delta>, which describes differences between 5.24.0 and 5.24.1.
+
+=head1 Notice
+
+XXX Any important notices here
+
+=head1 Core Enhancements
+
+XXX New core language features go here.  Summarize user-visible core language
+enhancements.  Particularly prominent performance optimisations could go
+here, but most should go in the L</Performance Enhancements> section.
+
+[ List each enhancement as a =head2 entry ]
 
 =head1 Security
 
-=head2 B<-Di> switch is now required for PerlIO debugging output
+XXX Any security-related notices go here.  In particular, any security
+vulnerabilities closed should be noted here rather than in the
+L</Selected Bug Fixes> section.
 
-Previously PerlIO debugging output would be sent to the file specified by the
-C<PERLIO_DEBUG> environment variable if perl wasn't running setuid and the
-B<-T> or B<-t> switches hadn't been parsed yet.
-
-If perl performed output at a point where it hadn't yet parsed its switches
-this could result in perl creating or overwriting the file named by
-C<PERLIO_DEBUG> even when the B<-T> switch had been supplied.
-
-Perl now requires the B<-Di> switch to produce PerlIO debugging output.  By
-default this is written to C<stderr>, but can optionally be redirected to a
-file by setting the C<PERLIO_DEBUG> environment variable.
-
-If perl is running setuid or the B<-T> switch was supplied C<PERLIO_DEBUG> is
-ignored and the debugging output is sent to C<stderr> as for any other B<-D>
-switch.
-
-=head2 Core modules and tools no longer search F<"."> for optional modules
-
-The tools and many modules supplied in core no longer search the default
-current directory entry in L<C<@INC>|perlvar/@INC> for optional modules.  For
-example, L<Storable> will remove the final F<"."> from C<@INC> before trying to
-load L<Log::Agent>.
-
-This prevents an attacker injecting an optional module into a process run by
-another user where the current directory is writable by the attacker, e.g. the
-F</tmp> directory.
-
-In most cases this removal should not cause problems, but difficulties were
-encountered with L<base>, which treats every module name supplied as optional.
-These difficulties have not yet been resolved, so for this release there are no
-changes to L<base>.  We hope to have a fix for L<base> in Perl 5.24.2.
-
-To protect your own code from this attack, either remove the default F<".">
-entry from C<@INC> at the start of your script, so:
-
-  #!/usr/bin/perl
-  use strict;
-  ...
-
-becomes:
-
-  #!/usr/bin/perl
-  BEGIN { pop @INC if $INC[-1] eq '.' }
-  use strict;
-  ...
-
-or for modules, remove F<"."> from a localized C<@INC>, so:
-
-  my $can_foo = eval { require Foo; }
-
-becomes:
-
-  my $can_foo = eval {
-      local @INC = @INC;
-      pop @INC if $INC[-1] eq '.';
-      require Foo;
-  };
+[ List each security issue as a =head2 entry ]
 
 =head1 Incompatible Changes
 
-Other than the security changes above there are no changes intentionally
-incompatible with Perl 5.24.0.  If any exist, they are bugs, and we request
-that you submit a report.  See L</Reporting Bugs> below.
+XXX For a release on a stable branch, this section aspires to be:
+
+    There are no changes intentionally incompatible with 5.XXX.XXX
+    If any exist, they are bugs, and we request that you submit a
+    report.  See L</Reporting Bugs> below.
+
+[ List each incompatible change as a =head2 entry ]
+
+=head1 Deprecations
+
+XXX Any deprecated features, syntax, modules etc. should be listed here.
+
+=head2 Module removals
+
+XXX Remove this section if inapplicable.
+
+The following modules will be removed from the core distribution in a
+future release, and will at that time need to be installed from CPAN.
+Distributions on CPAN which require these modules will need to list them as
+prerequisites.
+
+The core versions of these modules will now issue C<"deprecated">-category
+warnings to alert you to this fact.  To silence these deprecation warnings,
+install the modules in question from CPAN.
+
+Note that these are (with rare exceptions) fine modules that you are encouraged
+to continue to use.  Their disinclusion from core primarily hinges on their
+necessity to bootstrapping a fully functional, CPAN-capable Perl installation,
+not usually on concerns over their design.
+
+=over
+
+=item XXX
+
+XXX Note that deprecated modules should be listed here even if they are listed
+as an updated module in the L</Modules and Pragmata> section.
+
+=back
+
+[ List each other deprecation as a =head2 entry ]
+
+=head1 Performance Enhancements
+
+XXX Changes which enhance performance without changing behaviour go here.
+There may well be none in a stable release.
+
+[ List each enhancement as a =item entry ]
+
+=over 4
+
+=item *
+
+XXX
+
+=back
 
 =head1 Modules and Pragmata
+
+XXX All changes to installed files in F<cpan/>, F<dist/>, F<ext/> and F<lib/>
+go here.  If Module::CoreList is updated, generate an initial draft of the
+following sections using F<Porting/corelist-perldelta.pl>.  A paragraph summary
+for important changes should then be added by hand.  In an ideal world,
+dual-life modules would have a F<Changes> file that could be cribbed.
+
+[ Within each section, list entries as a =item entry ]
+
+=head2 New Modules and Pragmata
+
+=over 4
+
+=item *
+
+XXX
+
+=back
 
 =head2 Updated Modules and Pragmata
 
@@ -88,199 +119,271 @@ that you submit a report.  See L</Reporting Bugs> below.
 
 =item *
 
-L<Archive::Tar> has been upgraded from version 2.04 to 2.04_01.
+L<XXX> has been upgraded from version A.xx to B.yy.
+
+=back
+
+=head2 Removed Modules and Pragmata
+
+=over 4
 
 =item *
 
-L<bignum> has been upgraded from version 0.42 to 0.42_01.
-
-=item *
-
-L<CPAN> has been upgraded from version 2.11 to 2.11_01.
-
-=item *
-
-L<Digest> has been upgraded from version 1.17 to 1.17_01.
-
-=item *
-
-L<Digest::SHA> has been upgraded from version 5.95 to 5.95_01.
-
-=item *
-
-L<Encode> has been upgraded from version 2.80 to 2.80_01.
-
-=item *
-
-L<ExtUtils::MakeMaker> has been upgraded from version 7.10_01 to 7.10_02.
-
-=item *
-
-L<File::Fetch> has been upgraded from version 0.48 to 0.48_01.
-
-=item *
-
-L<File::Spec> has been upgraded from version 3.63 to 3.63_01.
-
-=item *
-
-L<HTTP::Tiny> has been upgraded from version 0.056 to 0.056_001.
-
-=item *
-
-L<IO> has been upgraded from version 1.36 to 1.36_01.
-
-=item *
-
-The IO-Compress modules have been upgraded from version 2.069 to 2.069_001.
-
-=item *
-
-L<IPC::Cmd> has been upgraded from version 0.92 to 0.92_01.
-
-=item *
-
-L<JSON::PP> has been upgraded from version 2.27300 to 2.27300_01.
-
-=item *
-
-L<Locale::Maketext> has been upgraded from version 1.26 to 1.26_01.
-
-=item *
-
-L<Locale::Maketext::Simple> has been upgraded from version 0.21 to 0.21_01.
-
-=item *
-
-L<Memoize> has been upgraded from version 1.03 to 1.03_01.
-
-=item *
-
-L<Module::CoreList> has been upgraded from version 5.20160506 to 5.20170114_24.
-
-=item *
-
-L<Net::Ping> has been upgraded from version 2.43 to 2.43_01.
-
-=item *
-
-L<Parse::CPAN::Meta> has been upgraded from version 1.4417 to 1.4417_001.
-
-=item *
-
-L<Pod::Html> has been upgraded from version 1.22 to 1.2201.
-
-=item *
-
-L<Pod::Perldoc> has been upgraded from version 3.25_02 to 3.25_03.
-
-=item *
-
-L<Storable> has been upgraded from version 2.56 to 2.56_01.
-
-=item *
-
-L<Sys::Syslog> has been upgraded from version 0.33 to 0.33_01.
-
-=item *
-
-L<Test> has been upgraded from version 1.28 to 1.28_01.
-
-=item *
-
-L<Test::Harness> has been upgraded from version 3.36 to 3.36_01.
-
-=item *
-
-L<XSLoader> has been upgraded from version 0.21 to 0.22, fixing a security hole
-in which binary files could be loaded from a path outside of C<@INC>.
-L<[perl #128528]|https://rt.perl.org/Public/Bug/Display.html?id=128528>
+XXX
 
 =back
 
 =head1 Documentation
 
+XXX Changes to files in F<pod/> go here.  Consider grouping entries by
+file and be sure to link to the appropriate page, e.g. L<perlfunc>.
+
+=head2 New Documentation
+
+XXX Changes which create B<new> files in F<pod/> go here.
+
+=head3 L<XXX>
+
+XXX Description of the purpose of the new file here
+
 =head2 Changes to Existing Documentation
 
-=head3 L<perlapio>
+XXX Changes which significantly change existing files in F<pod/> go here.
+However, any changes to F<pod/perldiag.pod> should go in the L</Diagnostics>
+section.
+
+=head3 L<XXX>
 
 =over 4
 
 =item *
 
-The documentation of C<PERLIO_DEBUG> has been updated.
+XXX Description of the change here
 
 =back
 
-=head3 L<perlrun>
+=head1 Diagnostics
+
+The following additions or changes have been made to diagnostic output,
+including warnings and fatal error messages.  For the complete list of
+diagnostic messages, see L<perldiag>.
+
+XXX New or changed warnings emitted by the core's C<C> code go here.  Also
+include any changes in L<perldiag> that reconcile it to the C<C> code.
+
+=head2 New Diagnostics
+
+XXX Newly added diagnostic messages go under here, separated into New Errors
+and New Warnings
+
+=head3 New Errors
 
 =over 4
 
 =item *
 
-The new B<-Di> switch has been documented, and the documentation of
-C<PERLIO_DEBUG> has been updated.
+XXX L<message|perldiag/"message">
+
+=back
+
+=head3 New Warnings
+
+=over 4
+
+=item *
+
+XXX L<message|perldiag/"message">
+
+=back
+
+=head2 Changes to Existing Diagnostics
+
+XXX Changes (i.e. rewording) of diagnostic messages go here
+
+=over 4
+
+=item *
+
+XXX Describe change here
+
+=back
+
+=head1 Utility Changes
+
+XXX Changes to installed programs such as F<perlbug> and F<xsubpp> go here.
+Most of these are built within the directory F<utils>.
+
+[ List utility changes as a =head2 entry for each utility and =item
+entries for each change
+Use L<XXX> with program names to get proper documentation linking. ]
+
+=head2 L<XXX>
+
+=over 4
+
+=item *
+
+XXX
+
+=back
+
+=head1 Configuration and Compilation
+
+XXX Changes to F<Configure>, F<installperl>, F<installman>, and analogous tools
+go here.  Any other changes to the Perl build process should be listed here.
+However, any platform-specific changes should be listed in the
+L</Platform Support> section, instead.
+
+[ List changes as a =item entry ].
+
+=over 4
+
+=item *
+
+XXX
 
 =back
 
 =head1 Testing
 
+XXX Any significant changes to the testing of a freshly built perl should be
+listed here.  Changes which create B<new> files in F<t/> go here as do any
+large changes to the testing harness (e.g. when parallel testing was added).
+Changes to existing files in F<t/> aren't worth summarizing, although the bugs
+that they represent may be covered elsewhere.
+
+[ List each test improvement as a =item entry ]
+
 =over 4
 
 =item *
 
-A new test script, F<t/run/switchDx.t>, has been added to test that the new
-B<-Di> switch is working correctly.
+XXX
+
+=back
+
+=head1 Platform Support
+
+XXX Any changes to platform support should be listed in the sections below.
+
+[ Within the sections, list each platform as a =item entry with specific
+changes as paragraphs below it. ]
+
+=head2 New Platforms
+
+XXX List any platforms that this version of perl compiles on, that previous
+versions did not.  These will either be enabled by new files in the F<hints/>
+directories, or new subdirectories and F<README> files at the top level of the
+source tree.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
+
+=back
+
+=head2 Discontinued Platforms
+
+XXX List any platforms that this version of perl no longer compiles on.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
+
+=back
+
+=head2 Platform-Specific Notes
+
+XXX List any changes for specific platforms.  This could include configuration
+and compilation changes or changes in portability/compatibility.  However,
+changes within modules for platforms should generally be listed in the
+L</Modules and Pragmata> section.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
+
+=back
+
+=head1 Internal Changes
+
+XXX Changes which affect the interface available to C<XS> code go here.  Other
+significant internal changes for future core maintainers should be noted as
+well.
+
+[ List each change as a =item entry ]
+
+=over 4
+
+=item *
+
+XXX
 
 =back
 
 =head1 Selected Bug Fixes
 
+XXX Important bug fixes in the core language are summarized here.  Bug fixes in
+files in F<ext/> and F<lib/> are best summarized in L</Modules and Pragmata>.
+
+[ List each fix as a =item entry ]
+
 =over 4
 
 =item *
 
-The change to hashbang redirection introduced in Perl 5.24.0, whereby perl
-would redirect to another interpreter (Perl 6) if it found a hashbang path
-which contains "perl" followed by "6", has been reverted because it broke in
-cases such as C<#!/opt/perl64/bin/perl>.
+XXX
 
 =back
 
+=head1 Known Problems
+
+XXX Descriptions of platform agnostic bugs we know we can't fix go here.  Any
+tests that had to be C<TODO>ed for the release would be noted here.  Unfixed
+platform specific bugs also go here.
+
+[ List each fix as a =item entry ]
+
+=over 4
+
+=item *
+
+XXX
+
+=back
+
+=head1 Errata From Previous Releases
+
+=over 4
+
+=item *
+
+XXX Add anything here that we forgot to add, or were mistaken about, in
+the perldelta of a previous release.
+
+=back
+
+=head1 Obituary
+
+XXX If any significant core contributor has died, we've added a short obituary
+here.
+
 =head1 Acknowledgements
 
-Perl 5.24.1 represents approximately 8 months of development since Perl 5.24.0
-and contains approximately 8,100 lines of changes across 240 files from 18
-authors.
+XXX Generate this with:
 
-Excluding auto-generated files, documentation and release tools, there were
-approximately 2,200 lines of changes to 170 .pm, .t, .c and .h files.
-
-Perl continues to flourish into its third decade thanks to a vibrant community
-of users and developers.  The following people are known to have contributed
-the improvements that became Perl 5.24.1:
-
-Aaron Crane, Alex Vandiver, Aristotle Pagaltzis, Chad Granum, Chris 'BinGOs'
-Williams, Craig A. Berry, Father Chrysostomos, James E Keenan, Jarkko
-Hietaniemi, Karen Etheridge, Leon Timmermans, Matthew Horsfall, Ricardo Signes,
-Sawyer X, Sébastien Aperghis-Tramoni, Stevan Little, Steve Hay, Tony Cook.
-
-The list above is almost certainly incomplete as it is automatically generated
-from version control history.  In particular, it does not include the names of
-the (very much appreciated) contributors who reported issues to the Perl bug
-tracker.
-
-Many of the changes included in this version originated in the CPAN modules
-included in Perl's core.  We're grateful to the entire CPAN community for
-helping Perl to flourish.
-
-For a more complete list of all of Perl's historical contributors, please see
-the F<AUTHORS> file in the Perl source distribution.
+  perl Porting/acknowledgements.pl v5.24.1..HEAD
 
 =head1 Reporting Bugs
 
 If you find what you think is a bug, you might check the articles recently
-posted to the comp.lang.perl.misc newsgroup and the Perl bug database at
+posted to the comp.lang.perl.misc newsgroup and the perl bug database at
 L<https://rt.perl.org/> .  There may also be information at
 L<http://www.perl.org/> , the Perl Home Page.
 
@@ -291,8 +394,8 @@ will be sent off to perlbug@perl.org to be analysed by the Perl porting team.
 
 If the bug you are reporting has security implications which make it
 inappropriate to send to a publicly archived mailing list, then see
-L<perlsec/SECURITY VULNERABILITY CONTACT INFORMATION> for details of how to
-report the issue.
+L<perlsec/SECURITY VULNERABILITY CONTACT INFORMATION>
+for details of how to report the issue.
 
 =head1 SEE ALSO
 
