--- a/pod/perldiag.pod
+++ b/pod/perldiag.pod
@@ -3141,7 +3141,7 @@ You specified a character that has the given plainer way of writing it,
 and which is also portable to platforms running with different character
 sets. This usage is deprecated, and will be a fatal error in Perl 5.28.
 
-=item $* is no longer supported
+=item $* is no longer supported. Its use will be fatal in Perl 5.30
 
 (D deprecated, syntax) The special variable C<$*>, deprecated in older
 perls, has been removed as of 5.10.0 and is no longer supported.  In
@@ -3153,11 +3153,15 @@ modifiers.  You can enable C</m> for a lexical scope (even a whole file)
 with C<use re '/m'>.  (In older versions: when C<$*> was set to a true value
 then all regular expressions behaved as if they were written using C</m>.)
 
-=item $# is no longer supported
+Use of this variable will be a fatal error in Perl 5.30.
+
+=item $# is no longer supported. Its use will be fatal in Perl 5.30
 
 (D deprecated, syntax) The special variable C<$#>, deprecated in older
 perls, has been removed as of 5.10.0 and is no longer supported.  You
 should use the printf/sprintf functions instead.
+
+Use of this variable will be a fatal error in Perl 5.30.
 
 =item '%s' is not a code reference
 
